Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25175

Do not call glGetString() outside a valid OpenGL context

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0
    • Qt3D TP2
    • Qt3D
    • None
    • 5467c38ad5a9f983e0383cd51cea98dcfa5ad0f0

    Description

      From Tobias Koenig at kdab.com on the QNX project:

      We can not call qt_has_uint_buffers() inside the ctor of QGLIndexBufferPrivate, because at this point we are not inside a valid OpenGL context, so the call to glGetString() will cause a SEGFAULT

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes